# HPM_CAE

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEX_HANDOFF.md  DOMAIN_MODEL.md  LEGACY_INVENTORY.md  MIGRATION_PLAN.md  MISSION_MODEL.md  PRODUCT_PRINCIPLES.md  PRODUCT_VISION.md  PROJECT_AUDIT.md  PROJECT_FORMAT.md  PROJECT_MANIFEST.json  README.md  REBOOT_STATUS.md  ROADMAP.md  SCENE_MODEL.md  SOLVER_API.md  STATUS.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  UI_UX_SPEC.md  VISION.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_closed_loop_v05.py  run_demo.py  run_dynamic_field_control_v07.py  run_effect_twin_v08.py  run_field_control_v06.py  run_perception_v02.py  run_perception_v03.py  run_protection_v04.py  run_studio.py  run_ui_v09.py  run_ui_v10.py  run_ui_v11.py  run_ui_v12.py  (+4 more)
adr/: 0001-reboot-product-direction.md  0001-scene-first-reboot.md  0002-entity-component-scene-model.md  0003-hpmdt-project-format.md  0004-react-three-studio-ui.md  0005-legacy-adapter-boundary.md  0006-result-data-model.md
backend/: README.md
configs/: cae_project_v09.yaml  cae_project_v10.yaml  cae_project_v11.yaml  cae_project_v12.yaml  cae_project_v13.yaml  cae_project_v14.yaml  closed_loop_v05.yaml  closed_loop_v05_paper.yaml  default.yaml  dynamic_field_control_v07.yaml  dynamic_field_control_v07_paper.yaml  effect_twin_v08.yaml  effect_twin_v08_paper.yaml  external_data_evidence.yaml  field_control_v06.yaml  field_control_v06_paper.yaml  paper_factory_v20d.yaml  perception_v02.yaml  perception_v02_paper.yaml  perception_v03.yaml  perception_v03_paper.yaml  platform_readiness.yaml  protection_v04.yaml  protection_v04_paper.yaml
docs/: CAE_WORKBENCH_V09.md  CAE_WORKBENCH_V10.md  CAE_WORKBENCH_V11.md  CAE_WORKBENCH_V12.md  CAE_WORKBENCH_V13.md  CAE_WORKBENCH_V14.md  CAE_WORKBENCH_V20B.md  CLOSED_LOOP_V05.md  DATA_IMPORT_V30.md  DYNAMIC_FIELD_CONTROL_V07.md  EFFECT_TWIN_V08.md  FIELD_CONTROL_V06.md  HPM-DT_Studio_0.1_验收报告.html  HPM_DT_NORTH_STAR.md  HPM_DT_ROADMAP.md  IMAGE2_TASKS.md  IMAGE2_机理图提示词.md  IMAGE2_正式插图任务.md  MISSION_SIMULATION_V20C.md  MODEL_CONVENTIONS.md  PAPER_FACTORY_V20D.md  PERCEPTION_V02.md  PERCEPTION_V03.md  PLATFORM_READINESS.md  PLUGIN_MARKETPLACE_V20C.md  PROTECTION_V04.md  用户使用手册.md  (+3 more)
(+254 files in other folders)
