[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpm-digital-twin"
version = "2.0a0"
description = "全中文归一化阵列算法 CAE：V2.0A 可信度验证体系、Bootstrap 验证中心、中文报告与论文图表输出"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "threadpoolctl>=3.0",
  "Pillow>=10.0",
  "pandas>=2.0",
  "plotly>=6.0",
  "gradio>=6.5,<7",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "playwright>=1.49", "nbformat>=5.10", "nbclient>=0.10"]

[tool.setuptools.packages.find]
where = ["src"]
