[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpmdt-studio"
version = "0.1.0a0"
description = "HPM-DT Studio: system-level electromagnetic scene and mission simulation studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8", "ruff>=0.8", "hypothesis>=6.100", "playwright>=1.49"]

[project.scripts]
hpmdt-studio = "hpmdt.__main__:main"

[tool.setuptools.packages.find]
where = ["backend/src"]
